add custom episode component

--- a/index.haml
+++ b/index.haml
@@ -142,108 +142,7 @@
                 %a{:href => "#"}
                   .fa.fa-instagram
     #latest-show
-    .entry
-      .cover158
-        %h2
-          The man who reviewed 12 movies at once
-      .description
-        %p
-          What does an illiterate postal worker and addicted video gamers have in common? Only that they are the subject of discussion on another KickArts episode. Yes, Lana Walters talks about her new webseries, <a href="https://www.youtube.com/watch?v=QqB6o63er0g" target="_blank">Game Over</a>, children's author Emma Vere-Jones discusses her latest book, <a href="http://www.emmaverejones.com/books-and-stories-1-1/" target="_blank">Stan the Van Man</a> and Paul Qualtrough joins us to mini - review 12 films in thye NZIFF.
-      .media
-        .left-panel
-          %i.icon-4x.fa.fa-play-circle-o.fa-4x
-          %p episode #158
-        .right-panel
-          %i.icon.fa.fa-arrow-circle-o-down
-            %span.action download
-          %p.date posted 26 July 2015
-        .player
-          %audio{:controls => "controls"}
-    .entry
-      .cover157
-        %h2
-          Docu Fast Watch
-      .description
-        %p
-          Want to see 10 great NZ docos in 40 minutes? <a href="http://loadingdocs.net" target="_blank">Loading Docs</a>, an initiative started by guest Julia Parnell, does exactly that. And filmmaker Rowena Baines, director of "Dancing in the Dark" also joins us to talk the challenges of making a 3 minute doco plus all the other great work she is doing with helping Vanuatu <a href="http://rowenabaines.com/vanuatu-music-revival-project" target="_blank">reaccess music</a>. PLUS Don Bassett discusses "Wunderrūma" at the Auckland Art Gallery and Molly reviews "Caterpillers" at the Bruce Mason.
-      .media
-        .left-panel
-          %i.icon-4x.fa.fa-play-circle-o.fa-4x
-          %p episode #157
-        .right-panel
-          %i.icon.fa.fa-arrow-circle-o-down
-            %span.action download
-          %p.date posted 19 July 2015
-        .player
-          %audio{:controls => "controls"}
-    .entry
-      .cover156
-        %h2
-          A Threesome with Emmet Skilton
-      .description
-        %p
-          Climate Change! Politics! A Threesome! Yes, it's 'that kind of show" to quote special guest, Emmet Skilton (Almighty Johnsons), AND it's our THIRD BIRTHDAY SHOW. Emmet talks about his upcoming show on climate change called "Between two waves" opening in August and Enny Benzonelli cuts together a KickArts retrospective to celebrate our three years on air. And a big thanks to those that have made this happen - Paul Hooli, Paula Crimmens, Catherine George, Anna Harding, Lisa Finucane, Mary Wadsworth, Merrin H Cavel, Will Moore and Carolynn Day, Art Green, Carolyn Finucane, Susan Payne Rose, Don Bassett and the indefatigable Adam Fresco! And extra special thanks to Emma Bishop who works hard in front of and behind the scenes! Don't miss it!!
-      .media
-        .left-panel
-          %i.icon-4x.fa.fa-play-circle-o.fa-4x
-          %p episode #156
-        .right-panel
-          %i.icon.fa.fa-arrow-circle-o-down
-            %span.action download
-          %p.date posted 12 July 2015
-        .player
-          %audio{:controls => "controls"}
-    .entry
-      .cover155
-        %h2
-          Cocktail a la KickArts
-      .description
-        %p
-          Take 3 reviewers, add a fantastic guest, stir it with an overwhelmed host and sprinkle a 7 years old critic and you get an awesome KickArts’ cocktail. Victoria Abbott tells us all about her upcoming show "Caterpillars" on at the Bruce Mason Centre and about her daytime job as a Clown Doctor. Anna reviews "The Mourning After" and "Krisnan's Dairy", Will gets about Orang-utan and Don Bassett talks Opera, more specifically Puccini’s "Turandot". All topped off with Molly Green and her review of "Grandma McGarvey" Grandpa’s Slippers" (Pumphouse Theatre). Don’t miss this unique show and stream it now!
-      .media
-        .left-panel
-          %i.icon-4x.fa.fa-play-circle-o.fa-4x
-          %p episode #155
-        .right-panel
-          %i.icon.fa.fa-arrow-circle-o-down
-            %span.action download
-          %p.date posted 5 July 2015
-        .player
-          %audio{:controls => "controls"}
-    .entry
-      .cover154
-        %h2
-          Ourangutan Edition
-      .description
-        %p
-          Awesome Awesome Awesome is all we can can say about Sunday's show! Tai Royal and Helen Langford from Okareka Dance Company join us to talk about all the exciting stuff going on, Regan from Te Rehia comes into the studio to talk about "Hokia Ki Nga Maunga" and Alice Canton talks "Orangutan". PLUS dynamic duo Carolynn and Will review "Murdoch", ATC's latest offering. Plus some fantastic discourse on the state of the arts in Aotearoa NZ.
-      .media
-        .left-panel
-          %i.icon-4x.fa.fa-play-circle-o.fa-4x
-          %p episode #154
-        .right-panel
-          %i.icon.fa.fa-arrow-circle-o-down
-            %span.action download
-          %p.date posted 28 June 2015
-        .player
-          %audio{:controls => "controls"}
-    .entry
-      .cover153
-        %h2
-          The KickArts After
-      .description
-        %p
-          Another informative, humourous and irreverent KickArts show this week - Ahi Karunaharan and Prateek Vadgaonkar discuss the upcoming "The Mourning After" at the Basement Theatre and Julie Collis joins us as "Grandma McGarvey" from Tim Bray's latest offering at the Pumphouse. Emma reviews "BALLET REVOLUCION" and the dynamic duo, Carolyn and Will, review "Matariki Mixit" at Te Pou. All this plus some Sir Paul.
-      .media
-        .left-panel
-          %i.icon-4x.fa.fa-play-circle-o.fa-4x
-          %p episode #153
-        .right-panel
-          %i.icon.fa.fa-arrow-circle-o-down
-            %span.action download
-          %p.date posted 21 June 2015
-        .player
-          %audio{:controls => "controls"}
+    %episode
     .box-2
       .box-col-2
         .card-title.green-sea
@@ -267,4 +166,7 @@
             All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
         .card-action
           %a{:href => "#"}More info
-  %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js"}        
+  %script{:src => "episode.tag", :type => "riot/tag"}
+  %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js"}
+  :javascript
+    riot.mount('episode')
