--- a/index.haml
+++ b/index.haml
@@ -165,7 +165,8 @@
           %p
             All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
         .card-action
-          %a{:href => "#"}More info        
+          %a{:href => "#"}More info
+  %script{:src => "raw.tag", :type => "riot/tag"}     
   %script{:src => "episode.tag", :type => "riot/tag"}
   %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js"}
   :javascript
