adds contact boxes

--- a/css/main.css
+++ b/css/main.css
@@ -386,6 +386,11 @@ header {
 
 .card-body {
   border-bottom: .1rem solid #CCC; }
+  .card-body ul {
+    list-style-type: square;
+    font-size: 0.85rem;
+    line-height: 1.3rem;
+    padding-left: 1.8rem; }
 
 .card-action {
   padding: 0.9rem; }
@@ -396,6 +401,10 @@ header {
   .card-action li {
     display: inline;
     padding-right: 0.9rem; }
+
+iframe {
+  padding: 0;
+  z-index: 0; }
 
 .entry {
   margin: 5rem auto;
