--- a/index.haml
+++ b/index.haml
@@ -10,7 +10,6 @@
     %script{:src => "js/min/modernizr.js"}
     %script{:src => "js/min/jquery-1.11.3.min.js"}
     %script{:src => "js/min/match-height.js", :type => "text/javascript"}
-    %script{:src => "js/min/skrollr.js"}
     %script{:src => "js/min/app-min.js"}
   %body
     .top-bar
@@ -141,6 +140,58 @@
               %li
                 %a{:href => "#"}
                   .fa.fa-instagram
+    #contact
+      .box-2
+        .box-col-2
+          .card-title.alizarin
+            %h3
+              Be Our Guest on Sunday
+          .card-body.box-height
+            %p
+              KickArts - Auckland's comprehensive art show is open to all artists in Auckland or anywhere else in New Zealand and in the World.
+            %p
+              Do you have a new album, exhibition, show, movie or arts event? Then KickArts is your prime place to talk about it. Our relaxed panel format means you get to discuss your project, your background and your views on arts in New Zealand with Richard and the other guests.
+            %p
+              It is simple to get in touch with KickArts. Just email to <a href='mailto:kickarts1@gmail.com'>kickarts1@gmail.com</a>, tell us briefly about your project and how we can get in touch with you.
+            %p
+              Once all has been sorted, just book your Sunday evening, because we are live! The show will start at 8.35pm and run till 10.05pm. We encourage our guests to stay the whole show. Just reach the studio about 15 minutes in advance so we can have the change to talk a little bit before it starts.
+          .card-action
+            %ul
+              %li
+                %a{:href => "#"}
+                  .fa.fa-envelope-o
+              %li
+                %a{:href => "#"}
+                  .fa.fa-facebook
+        .box-col-2
+          .card-title.alizarin
+            %h3
+              KickArts' Studio
+          .card-body.box-height
+            %p
+              KickArts goes live every Sunday night at 8.35pm from the PlanetFM's studios. To reach them just take a look at the map and read the simple instructions bellow.
+            %iframe{:frameborder => "0", :src => "https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3191.6565872874557!2d174.709828!3d-36.874638000000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4721e8ba396b%3A0x68173e75b3d6c62!2sPlanet+FM!5e0!3m2!1sen!2snz!4v1423222400085", :style => "border:0", :width => "100%"}
+            %p
+              How to reach 79 Carrington Road:
+              %ul
+                %li Enter via Unitec-Gate 1 and turn into the narrow lane first on the left.
+                %li Park only in designated carparks.
+                %li Exit via the one-way system.
+            %p
+              Other ways to reach us without a car:
+              %ul
+                %li There is a railway station in Mt. Albert and a 2km walk.
+                %li There is a range of bus services.
+                %li There are cycle tracks alongside the north western motorway.
+                %li You can enter from Gt. North Road, on foot or bicycle via the walking track.
+          .card-action
+            %ul
+              %li
+                %a{:href => "#"}
+                  .fa.fa-globe
+              %li
+                %a{:href => "#"}
+                  .fa.fa-location-arrow
     #latest-show
     %episode
     .box-2
@@ -165,8 +216,17 @@
           %p
             All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
         .card-action
-          %a{:href => "#"}More info
-  %script{:src => "raw.tag", :type => "riot/tag"}     
+          %ul
+            %li
+              %a{:href => "#"}More info
+            %li
+              %a{:href => "#"}
+                .fa.fa-facebook
+            %li
+              %a{:href => "#"}
+                .fa.fa-twitter
+
+  %script{:src => "raw.tag", :type => "riot/tag"}
   %script{:src => "episode.tag", :type => "riot/tag"}
   %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js"}
   :javascript
