--- a/css/main.scss
+++ b/css/main.scss
@@ -307,95 +307,9 @@ header {
 
 // COVERS
 
-.cover158 {
+.cover {
   position: relative;
   height: 32rem;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150726.jpg');
-  background-size: cover;
-  background-position: 25% 75%;
-  h2 {
-    font-size: 1.5rem;
-    opacity: .8;
-    text-transform: uppercase;
-    color: #FFF;
-    font-family: Montserrat;
-    position: absolute;
-    bottom: 1.5rem;
-    left: 2.5rem;
-  }
-}
-.cover157 {
-  position: relative;
-  height: 32rem;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150719.jpg');
-  background-size: cover;
-  background-position: 25% 75%;
-  h2 {
-    font-size: 1.5rem;
-    opacity: .8;
-    text-transform: uppercase;
-    color: #FFF;
-    font-family: Montserrat;
-    position: absolute;
-    bottom: 1.5rem;
-    left: 2.5rem;
-  }
-}
-.cover156 {
-  position: relative;
-  height: 32rem;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150712.jpg');
-  background-size: cover;
-  background-position: 25% 75%;
-  h2 {
-    font-size: 1.5rem;
-    opacity: .8;
-    text-transform: uppercase;
-    color: #FFF;
-    font-family: Montserrat;
-    position: absolute;
-    bottom: 1.5rem;
-    left: 2.5rem;
-  }
-}
-.cover155 {
-  position: relative;
-  height: 32rem;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150705.jpg');
-  background-size: cover;
-  background-position: 25% 75%;
-  h2 {
-    font-size: 1.5rem;
-    opacity: .8;
-    text-transform: uppercase;
-    color: #FFF;
-    font-family: Montserrat;
-    position: absolute;
-    bottom: 1.5rem;
-    left: 2.5rem;
-  }
-}
-.cover154 {
-  position: relative;
-  height: 32rem;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150628.jpg');
-  background-size: cover;
-  background-position: 25% 75%;
-  h2 {
-    font-size: 1.5rem;
-    opacity: .8;
-    text-transform: uppercase;
-    color: #FFF;
-    font-family: Montserrat;
-    position: absolute;
-    bottom: 1.5rem;
-    left: 2.5rem;
-  }
-}
-.cover153 {
-  position: relative;
-  height: 32rem;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.27) 93%,rgba(0,0,0,0.22) 100%), url('../img/2015/20150621.jpg');
   background-size: cover;
   background-position: 25% 75%;
   h2 {
