adds recent-shows component withonl the first 3 episodes

--- a/index.haml
+++ b/index.haml
@@ -230,4 +230,4 @@
   %script{:src => "episode.tag", :type => "riot/tag"}
   %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js"}
   :javascript
-    riot.mount('episode, raw')
+    riot.mount('episode, recent-shows, raw')
