--- a/index.haml
+++ b/index.haml
@@ -193,7 +193,7 @@
                 %a{:href => "#"}
                   .fa.fa-location-arrow
     #latest-show
-    %episode
+    %recent-shows
     .box-2
       .box-col-2
         .card-title.green-sea
@@ -227,6 +227,7 @@
                 .fa.fa-twitter
 
   %script{:src => "raw.tag", :type => "riot/tag"}
+  %script{:src => "recent-shows.tag", :type => "riot/tag"}  
   %script{:src => "episode.tag", :type => "riot/tag"}
   %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js"}
   :javascript
