--- a/index.haml
+++ b/index.haml
@@ -20,9 +20,10 @@
           .nav-logo
             %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
           .nav-title
-            %span{:style => "font-weight: 400"}>Kick
-            Arts
+            %span{:style => "font-weight: 400"}>KICK
+            ARTS
             %span{:style => "font-weight: 400"}>.org.nz
+      %span.menu-button.menu-open
       %ul
         %li
           %a.menu-link{:href => "#latest-show"}
@@ -48,12 +49,12 @@
           %p.subtitle
             Auckland's Comprehensive ArtShow.
           %p.details
-            Every Sunday 8.35 | 104.6 FM
+            Every Sunday 8.35pm | 104.6 FM
       .box
         .box-col-3
           .card-title.emerald
             %h3
-              Live Shows
+              Live Show
             .card-icon
               .fa.fa-bolt
           .card-body.box-height
@@ -141,7 +142,7 @@
                 %a{:href => "#"}
                   .fa.fa-instagram
     #contact
-      .box-2
+      .box-2.contact-box
         .box-col-2
           .card-title.alizarin
             %h3
@@ -227,7 +228,7 @@
                 .fa.fa-twitter
 
   %script{:src => "raw.tag", :type => "riot/tag"}
-  %script{:src => "recent-shows.tag", :type => "riot/tag"}  
+  %script{:src => "recent-shows.tag", :type => "riot/tag"}
   %script{:src => "episode.tag", :type => "riot/tag"}
   %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js"}
   :javascript
