--- a/css/main.scss
+++ b/css/main.scss
@@ -43,7 +43,6 @@ nav {
   h1 {
     font-family: 'Exo 2', sans-serif;
     font-weight: 800;
-    text-transform: uppercase;
     font-size: 2rem;
     color: #3e3e3e;
   }
@@ -69,6 +68,17 @@ nav {
         border-bottom: .5rem solid #955CA5;
       }
     }
+  }
+  .menu-button {
+    display: none;
+    font-size: 1.4rem;
+    float: right;
+    color: #fff;
+    line-height: 3rem;
+    margin-right: 3rem;
+  }
+  .menu-close {
+    display: none;
   }
 }
 .active {
