--- a/index.haml
+++ b/index.haml
@@ -64,7 +64,7 @@
         .box-col-3
           .card-title.blue
             %h3
-              Weekly Stream
+              Stream
             .card-icon
               .fa.fa-rss
           .card-body.box-height
