--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,7 @@
 @import 'jeet/index';
 @import 'breakpoint/breakpoint';
 @import 'variables';
+@import 'responsive';
 // @include edit ();
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
@@ -41,10 +42,11 @@ nav {
     color: #3e3e3e;
   }
   h1 {
-    font-family: 'Exo 2', sans-serif;
+    font-family: $font-h;
     font-weight: 800;
     font-size: 2rem;
     color: #3e3e3e;
+    float: left;
   }
   ul {
     position: absolute;
@@ -52,7 +54,7 @@ nav {
     top: 0;
   }
   li {
-    font-family: 'Exo 2', sans-serif;
+    font-family: $font-h;
     font-weight: 400;
     display: inline;
     line-height: 4rem;
@@ -68,17 +70,14 @@ nav {
         border-bottom: .5rem solid #955CA5;
       }
     }
-  }
-  .menu-button {
-    display: none;
-    font-size: 1.4rem;
-    float: right;
-    color: #fff;
-    line-height: 3rem;
-    margin-right: 3rem;
-  }
-  .menu-close {
-    display: none;
+    .menu-button {
+      display: none;
+      font-size: 1.4rem;
+      color: whitesmoke;
+    }
+    .menu-close {
+      display: none;
+    }
   }
 }
 .active {
@@ -111,7 +110,7 @@ header {
 }
 .logo {
   max-width: 960px;
-  font-family: 'Exo 2', sans-serif;
+  font-family: $font-h;
   color: #fff;
   font-size: 4rem;
   margin: 0 auto;
@@ -188,7 +187,7 @@ header {
   color: whitesmoke;
   padding: 4rem 1rem 1rem 1rem;
   h3 {
-    font-family: 'Exo 2', sans-serif;
+    font-family: $font-h;
     font-weight: 800;
     text-transform: uppercase;
     font-size: 1.3rem;
@@ -239,7 +238,7 @@ header {
 .card-action {
   padding: 0.9rem;
   a {
-    font-family: 'Exo 2', sans-serif;
+    font-family: $font-h;
     font-weight: 800;
     text-transform: uppercase;
   }
