adds nav links to team and contacts

--- a/index.haml
+++ b/index.haml
@@ -29,10 +29,10 @@
           %a.menu-link{:href => "#latest-show"}
             Latest shows
         %li
-          %a.menu-link{:href => "#"}
+          %a.menu-link{:href => "#our-team"}
             Our Team
         %li
-          %a.menu-link{:href => "#"}
+          %a.menu-link{:href => "#contact"}
             Contact us
         %li
           %a.menu-link{:href => "#"}
