--- a/index.haml
+++ b/index.haml
@@ -12,34 +12,35 @@
     %script{:src => "js/min/match-height.js", :type => "text/javascript"}
     %script{:src => "js/min/app-min.js"}
   %body
-    .top-bar
-      &nbsp;
-    %nav
-      %a{:href => "#header"}
-        %h1
-          .nav-logo
-            %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
-          .nav-title
-            %span{:style => "font-weight: 400"}>KICK
-            ARTS
-            %span{:style => "font-weight: 400"}>.org.nz
-      %span.menu-button.menu-open
-      %ul
-        %li
-          %a.menu-link{:href => "#latest-show"}
-            Latest shows
-        %li
-          %a.menu-link{:href => "#our-team"}
-            Our Team
-        %li
-          %a.menu-link{:href => "#contact"}
-            Contact us
-        %li
-          %a.menu-link{:href => "#"}
-            Archive
-        %li
-          %a.menu-link{:href => "#"}
-            .fa.fa-search
+    .menu
+      .top-bar.is-hidden
+        &nbsp;
+      %nav.is-hidden
+        %a{:href => "#header"}
+          %h1
+            .nav-logo
+              %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
+            .nav-title
+              %span{:style => "font-weight: 400"}>KICK
+              ARTS
+              %span{:style => "font-weight: 400"}>.org.nz
+        %span.menu-button.menu-open
+        %ul
+          %li
+            %a.menu-link{:href => "#latest-show"}
+              Latest shows
+          %li
+            %a.menu-link{:href => "#our-team"}
+              Our Team
+          %li
+            %a.menu-link{:href => "#contact"}
+              Contact us
+          %li
+            %a.menu-link{:href => "#"}
+              Archive
+          %li
+            %a.menu-link{:href => "#"}
+              .fa.fa-search
     %header#header
       %h1.logo
         %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
