--- a/css/main.scss
+++ b/css/main.scss
@@ -90,6 +90,7 @@ nav {
   width: 100%;
   z-index: 200;
   background-color: whitesmoke;
+  box-shadow: 0 0 33px 0 rgba(56,56,56,0.52);
 }
 .nav-logo {
   position: relative;
@@ -153,6 +154,8 @@ header {
 
 .box {
   @include center(960px);
+}
+.box-padding-5 {
   padding-top: 5rem;
 }
 .box-col-3 {
@@ -168,10 +171,6 @@ header {
     line-height: 1.3rem;
     font-size: .85rem;
   }
-}
-.box-2{
-  @include center(960px);
-  padding-top: 1.5rem;
 }
 .box-col-2 {
   @include column(1/2);
@@ -333,7 +332,7 @@ iframe {
 }
 
 
-// COVERS
+// COVER
 
 .cover {
   position: relative;
@@ -349,5 +348,39 @@ iframe {
     position: absolute;
     bottom: 1.5rem;
     left: 2.5rem;
+  }
+}
+
+// FOOTER
+
+.copyright {
+  width: 100%;
+  background: whitesmoke;
+  margin-top: 2rem;
+  padding-top: .8rem;
+  height: 5rem;
+  font-family: $font-h;
+  box-shadow: -2px -1px 33px 3px rgba(56,56,56,0.52);
+}
+.footer-social {
+  text-align: center;
+  padding-top: .8rem;
+  a {
+    color: #969696;
+    &:hover {
+      color: darken(#969696, 30%);
+    }
+  }
+  li {
+    display: inline;
+    padding-right: 0.4rem;
+    padding-left: 0.4rem;
+  }
+}
+footer {
+  p {
+    padding-top: 0.3rem;
+    text-align: center;
+    font-size: 0.85rem;
   }
 }
