--- a/index.haml
+++ b/index.haml
@@ -12,35 +12,34 @@
     %script{:src => "js/min/match-height.js", :type => "text/javascript"}
     %script{:src => "js/min/app-min.js"}
   %body
-    .menu
-      .top-bar.is-hidden
-        &nbsp;
-      %nav.is-hidden
-        %a{:href => "#header"}
-          %h1
-            .nav-logo
-              %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
-            .nav-title
-              %span{:style => "font-weight: 400"}>KICK
-              ARTS
-              %span{:style => "font-weight: 400"}>.org.nz
-        %span.menu-button.menu-open
-        %ul
-          %li
-            %a.menu-link{:href => "#latest-show"}
-              Latest shows
-          %li
-            %a.menu-link{:href => "#our-team"}
-              Our Team
-          %li
-            %a.menu-link{:href => "#contact"}
-              Contact us
-          %li
-            %a.menu-link{:href => "#"}
-              Archive
-          %li
-            %a.menu-link{:href => "#"}
-              .fa.fa-search
+    .top-bar.is-hidden
+      &nbsp;
+    %nav.is-hidden
+      %a{:href => "#header"}
+        %h1
+          .nav-logo
+            %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
+          .nav-title
+            %span{:style => "font-weight: 400"}>KICK
+            ARTS
+            %span{:style => "font-weight: 400"}>.org.nz
+      %span.menu-button.menu-open
+      %ul
+        %li
+          %a.menu-link{:href => "#latest-show"}
+            Latest shows
+        %li
+          %a.menu-link{:href => "#our-team"}
+            Our Team
+        %li
+          %a.menu-link{:href => "#contact"}
+            Contact us
+        %li
+          %a.menu-link{:href => "#"}
+            Archive
+        %li
+          %a.menu-link{:href => "#"}
+            .fa.fa-search
     %header#header
       %h1.logo
         %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
@@ -51,7 +50,7 @@
             Auckland's Comprehensive ArtShow.
           %p.details
             Every Sunday 8.35pm | 104.6 FM
-      .box
+      .box.box-padding-5
         .box-col-3
           .card-title.emerald
             %h3
@@ -83,7 +82,7 @@
           .card-action
             %a{:href => "#"}Browse archive
     #our-team
-      .box-2
+      .box.box-padding-5
         .box-col-2
           .card-title.green-sea
             %h3
@@ -143,7 +142,7 @@
                 %a{:href => "#"}
                   .fa.fa-instagram
     #contact
-      .box-2.contact-box
+      .box.contact-box.box-padding-5
         .box-col-2
           .card-title.alizarin
             %h3
@@ -196,38 +195,53 @@
                   .fa.fa-location-arrow
     #latest-show
     %recent-shows
-    .box-2
-      .box-col-2
-        .card-title.green-sea
-          %h3
-            Our team
-          .card-icon
-            .fa.fa-users
-        .card-body.box-height
-          %p
-            Find out who is behind the microphone, their background, story and juicy gossip... you wish.
-        .card-action
-          %a{:href => "#"}More info
-      .box-col-2
-        .card-title.alizarin
-          %h3
-            Contact us
-          .card-icon
-            .fa.fa-map-marker
-        .card-body.box-height
-          %p
-            All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
-        .card-action
-          %ul
-            %li
-              %a{:href => "#"}More info
-            %li
-              %a{:href => "#"}
-                .fa.fa-facebook
-            %li
-              %a{:href => "#"}
-                .fa.fa-twitter
-
+    %footer
+      .box
+        .box-col-2
+          .card-title.green-sea
+            %h3
+              Our team
+            .card-icon
+              .fa.fa-users
+          .card-body.box-height
+            %p
+              Find out who is behind the microphone, their background, story and juicy gossip... you wish.
+          .card-action
+            %a{:href => "#"}More info
+        .box-col-2
+          .card-title.alizarin
+            %h3
+              Contact us
+            .card-icon
+              .fa.fa-map-marker
+          .card-body.box-height
+            %p
+              All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
+          .card-action
+            %ul
+              %li
+                %a{:href => "#"}More info
+              %li
+                %a{:href => "#"}
+                  .fa.fa-facebook
+              %li
+                %a{:href => "#"}
+                  .fa.fa-twitter
+      .copyright
+        %p
+          &copy; KickArts, 2014-2015
+        %p
+          Site by <a href="www.webkea.co.nz">WEBKEA</a>
+        %ul.footer-social
+          %li
+            %a{:href => "#"}
+              .fa.fa-envelope-o
+          %li
+            %a{:href => "#"}
+              .fa.fa-facebook
+          %li
+            %a{:href => "#"}
+              .fa.fa-twitter
   %script{:src => "raw.tag", :type => "riot/tag"}
   %script{:src => "recent-shows.tag", :type => "riot/tag"}
   %script{:src => "episode.tag", :type => "riot/tag"}
