--- a/css/main.css
+++ b/css/main.css
@@ -208,7 +208,7 @@ nav {
     color: #3e3e3e;
     float: left; }
   nav ul {
-    position: absolute;
+    float: right;
     right: 3rem;
     top: 0; }
   nav li {
@@ -218,7 +218,7 @@ nav {
     line-height: 4rem;
     text-transform: uppercase;
     font-size: 1rem;
-    padding-right: .9rem; }
+    padding-left: .9rem; }
     nav li a {
       padding-bottom: .95rem; }
       nav li a:hover {
@@ -231,6 +231,22 @@ nav {
       color: whitesmoke; }
     nav li .menu-close {
       display: none; }
+
+.nav-center {
+  *zoom: 1;
+  width: auto;
+  max-width: 960px;
+  float: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0; }
+  .nav-center:before, .nav-center:after {
+    content: '';
+    display: table; }
+  .nav-center:after {
+    clear: both; }
 
 .active {
   border-bottom: .5rem solid #955CA5; }
@@ -248,7 +264,7 @@ nav {
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  padding: .3rem .3rem .3rem 3rem; }
+  padding: .3rem .3rem .3rem 0; }
   .nav-logo img {
     height: 3.5rem; }
 
