--- a/css/main.scss
+++ b/css/main.scss
@@ -161,6 +161,9 @@ header {
 .box-padding-5 {
   padding-top: 5rem;
 }
+.box-padding-2 {
+  padding-top: 2rem;
+}
 .box-col-3 {
   @include column(1/3);
   @include breakpoint($small) {
@@ -243,6 +246,9 @@ header {
     line-height: 1.3rem;
     padding-left: 1.8rem;
   }
+  .small-text {
+    font-size: .6rem;
+  }
 }
 .card-action {
   padding: 0.9rem;
@@ -261,6 +267,7 @@ iframe {
   z-index: 0;
   pointer-events: none;
 }
+
 
 
 //TEAM
