adds links to icons

--- a/index.haml
+++ b/index.haml
@@ -103,14 +103,11 @@
           .card-action
             %ul
               %li
-                %a{:href => "#"}
+                %a{:href => "mailto:kickarts@gmail.com"}
                   .fa.fa-envelope-o
               %li
-                %a{:href => "#"}
+                %a{:href => "http://ugly.org.nz/", :target => '_blank'}
                   .fa.fa-globe
-              %li
-                %a{:href => "#"}
-                  .fa.fa-linkedin
         .box-col-2
           .card-title.green-sea
             %h3
@@ -128,19 +125,19 @@
           .card-action
             %ul
               %li
-                %a{:href => "#"}
+                %a{:href => "mailto:enny@webkea.co.nz"}
                   .fa.fa-envelope-o
               %li
-                %a{:href => "#"}
+                %a{:href => "http://ennybenzonelli.com/", :target => '_blank'}
                   .fa.fa-globe
               %li
-                %a{:href => "#"}
+                %a{:href => "https://nz.linkedin.com/pub/enny-benzonelli/2b/328/179", :target => '_blank'}
                   .fa.fa-linkedin
               %li
-                %a{:href => "#"}
+                %a{:href => "https://twitter.com/Enny_NZ", :target => '_blank'}
                   .fa.fa-twitter
               %li
-                %a{:href => "#"}
+                %a{:href => "https://instagram.com/ennynz/", :target => '_blank'}
                   .fa.fa-instagram
       .box.box-padding-2
         .box-col-2
@@ -160,14 +157,11 @@
           .card-action
             %ul
               %li
-                %a{:href => "#"}
-                  .fa.fa-envelope-o
-              %li
-                %a{:href => "#"}
+                %a{:href => "http://interacting.org.nz/interactingtheatre/", :target => '_blank'}
                   .fa.fa-globe
               %li
-                %a{:href => "#"}
-                  .fa.fa-linkedin
+                %a{:href => "https://twitter.com/crimmens_paula", :target => '_blank'}
+                  .fa.fa-twitter
         .box-col-2
           .card-title.green-sea
             %h3
@@ -185,20 +179,8 @@
           .card-action
             %ul
               %li
-                %a{:href => "#"}
-                  .fa.fa-envelope-o
-              %li
-                %a{:href => "#"}
-                  .fa.fa-globe
-              %li
-                %a{:href => "#"}
+                %a{:href => "https://nz.linkedin.com/pub/carolynn-day/17/5a4/5b8", :target => '_blank'}
                   .fa.fa-linkedin
-              %li
-                %a{:href => "#"}
-                  .fa.fa-twitter
-              %li
-                %a{:href => "#"}
-                  .fa.fa-instagram
       .box.box-padding-2
         .box-col-2
           .card-title.green-sea
@@ -219,13 +201,10 @@
           .card-action
             %ul
               %li
-                %a{:href => "#"}
-                  .fa.fa-envelope-o
-              %li
-                %a{:href => "#"}
+                %a{:href => "http://www.flicks.co.nz/member/Adam-Fresco/", :target => '_blank'}
                   .fa.fa-globe
               %li
-                %a{:href => "#"}
+                %a{:href => "https://nz.linkedin.com/pub/adam-fresco/a/7b6/80a", :target => '_blank'}
                   .fa.fa-linkedin
         .box-col-2
           .card-title.green-sea
@@ -244,20 +223,14 @@
           .card-action
             %ul
               %li
-                %a{:href => "#"}
-                  .fa.fa-envelope-o
-              %li
-                %a{:href => "#"}
+                %a{:href => "http://www.foundationnorth.org.nz/", :target => '_blank'}
                   .fa.fa-globe
               %li
-                %a{:href => "#"}
+                %a{:href => "https://nz.linkedin.com/pub/catherine-george/21/387/13", :target => '_blank'}
                   .fa.fa-linkedin
               %li
-                %a{:href => "#"}
+                %a{:href => "https://twitter.com/catherinegangel", :target => '_blank'}
                   .fa.fa-twitter
-              %li
-                %a{:href => "#"}
-                  .fa.fa-instagram
     #contact
       .box.contact-box.box-padding-5
         .box-col-2
@@ -276,10 +249,10 @@
           .card-action
             %ul
               %li
-                %a{:href => "#"}
+                %a{:href => "mailto:kickarts1@gmail.com"}
                   .fa.fa-envelope-o
               %li
-                %a{:href => "#"}
+                %a{:href => "https://www.facebook.com/KickArts?_rdr=p", :target => '_blank'}
                   .fa.fa-facebook
         .box-col-2
           .card-title.alizarin
@@ -305,10 +278,10 @@
           .card-action
             %ul
               %li
-                %a{:href => "#"}
+                %a{:href => "http://www.planetaudio.org.nz/contact", :target => '_blank'}
                   .fa.fa-globe
               %li
-                %a{:href => "#"}
+                %a{:href => "https://www.google.co.nz/maps/dir//Planet+FM,+79+Carrington+Rd,+Point+Chevalier,+Auckland+1246/@-36.874638,174.709828,17z/data=!4m13!1m4!3m3!1s0x6d0d4721e8ba396b:0x68173e75b3d6c62!2sPlanet+FM!3b1!4m7!1m0!1m5!1m1!1s0x6d0d4721e8ba396b:0x68173e75b3d6c62!2m2!1d174.709828!2d-36.874638", :target => '_blank'}
                   .fa.fa-location-arrow
     #latest-show
     %recent-shows
@@ -324,7 +297,7 @@
             %p
               Find out who is behind the microphone, their background, story and juicy gossip... you wish.
           .card-action
-            %a{:href => "#"}More info
+            %a{:href => "#out-team"}More info
         .box-col-2
           .card-title.alizarin
             %h3
@@ -337,12 +310,15 @@
           .card-action
             %ul
               %li
-                %a{:href => "#"}More info
+                %a{:href => "#contact"}More info
               %li
-                %a{:href => "#"}
+                %a{:href => "mailto:kickarts1@gmail.com"}
+                  .fa.fa-envelope-o
+              %li
+                %a{:href => "https://www.facebook.com/KickArts?_rdr=p", :target => '_blank'}
                   .fa.fa-facebook
               %li
-                %a{:href => "#"}
+                %a{:href => "https://twitter.com/KickArtsRadio", :target => '_blank'}
                   .fa.fa-twitter
       .copyright
         %p
@@ -351,13 +327,13 @@
           Site by <a href="www.webkea.co.nz">WEBKEA</a>
         %ul.footer-social
           %li
-            %a{:href => "#"}
+            %a{:href => "mailto:kickarts1@gmail.com"}
               .fa.fa-envelope-o
           %li
-            %a{:href => "#"}
+            %a{:href => "https://www.facebook.com/KickArts?_rdr=p", :target => '_blank'}
               .fa.fa-facebook
           %li
-            %a{:href => "#"}
+            %a{:href => "https://twitter.com/KickArtsRadio", :target => '_blank'}
               .fa.fa-twitter
   %script{:src => "raw.tag", :type => "riot/tag"}
   %script{:src => "recent-shows.tag", :type => "riot/tag"}
