adds home button in nnav

--- a/index.haml
+++ b/index.haml
@@ -27,6 +27,9 @@
         %span.menu-button.menu-open
         %ul
           %li
+            %a.menu-link{:href => "#"}
+              .fa.fa-home
+          %li
             %a.menu-link{:href => "#latest-show"}
               Latest shows
           %li
