--- a/css/main.scss
+++ b/css/main.scss
@@ -34,10 +34,6 @@ nav {
   z-index: 1000;
   height: 3.4rem;
   width: 100%;
-  .nav-title {
-    display: inline-block;
-    vertical-align: middle;
-  }
   a {
     color: #3e3e3e;
   }
@@ -95,11 +91,16 @@ nav {
   background-color: whitesmoke;
   box-shadow: 0 0 33px 0 rgba(56,56,56,0.52);
 }
+.nav-title {
+  display: inline-block;
+  vertical-align: middle;
+  padding-bottom: .4rem;
+}
 .nav-logo {
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  padding: .3rem .3rem .3rem 0;
+  padding: .2rem .3rem .4rem 0;
   img {
     height: 3.5rem;
   }
